[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Managers/Levels/level_manager.gd" type="Script" id=1]
[ext_resource path="res://Scripts/StateMachine/state_machine.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Managers/Levels/States/costume_state.gd" type="Script" id=3]

[node name="LevelManager" type="Spatial"]
script = ExtResource( 1 )

[node name="SamuraiUnits" type="Node" parent="."]

[node name="BasicUnits" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Samurai" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
NAME = "samurai"

[node name="Basic" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
NAME = "basic"
